# NuiFlo-WorkForce

./: .gitignore  CLEANUP_SUMMARY.md  LOVABLE_INTEGRATION_GUIDE.md  NUIFLO_WORKFORCE_ROADMAP.md  README.md  VPS_DEPLOYMENT_GUIDE.md  deploy-clean.sh  deploy-continue.sh  deploy-fixed.sh  deploy-vps-simple.sh  deploy-vps.sh  deploy.sh  docker-compose.yml  env.template  main.py  render.yaml  requirements.txt  setup.py  start.sh  workforce_api_openapi.json
backend/: Dockerfile  test_spaces.py  test_structure.py
docs/: CI_CD_MIGRATIONS.md  COMPREHENSIVE_API_DOCUMENTATION.md  CORE_COMPONENTS_DOCUMENTATION.md  (+10 more)
workforce_api/: .dockerignore  .nixpacks.env  API_DOCUMENTATION.md  Dockerfile  Dockerfile.api  LOVABLE_INTEGRATION_GUIDE.md  MIGRATION_APPROACH.md  Procfile  QUICK_SECURITY_FIX.md  SECURITY_IMPLEMENTATION_PLAN.md  SUPABASE_MANUAL_STEPS.md  SUPABASE_SECURITY_REVIEW.md  alembic.ini  app.json  main.py  nixpacks.toml  pyproject.toml  railway.json  render.yaml  requirements.txt  setup.py  supabase_security_fixes_corrected.sql
workforce_api/migrations/: env.py
workforce_api/migrations/versions/: 001_initial_schema.py  002_add_rls_security_policies.py  003_make_owner_id_nullable.py
workforce_api/workforce_api/: __init__.py  main.py
workforce_api/workforce_api/api/v1/: __init__.py  health.py  teams.py
workforce_api/workforce_api/core/: auth.py  config.py  database.py  intelligent_router.py
workforce_api/workforce_api/models/: __init__.py  execution.py  role.py  team.py  user.py
workforce_api/workforce_api/services/: __init__.py  crew_extensions.py  team_service.py
(+26 files in other folders)
