[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workforce-api"
version = "0.1.0"
description = "NuiFlo WorkForce backend API (FastAPI + Supabase Postgres + CrewAI)"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "NuiFlo", email = "team@nuiflo.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.11",
    "pydantic-settings>=2.1",
    "crewai>=0.150",
    "structlog>=25.4",
    "python-dotenv>=1.0",
    "alembic>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["workforce_api"] 